--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-synchronized-string",
   "version": "0.0.0",
   "description": "providing globally synchronized strings",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
